# pseudo-3d-racing-game

./: .gitignore  Cargo.toml  rustfmt.toml
src/: assets.rs  directions.rs  main.rs  math.rs  player.rs  render.rs  road.rs  sprite.rs
src/assets/: biome.rs  builder.rs  catalog.rs  embedded.rs  ids.rs  mod.rs
src/graphics/: mod.rs  renderer.rs  shader.rs  sprite.rs  texture.rs  texture_array.rs  vertex.rs
src/graphics/shaders/: colored.frag  colored.vert  road_array.frag  road_array.vert  textured.frag  textured.vert  textured_array.frag
