[package]
name = "outrun_clone"
version = "0.1.0"
authors = ["Tomast1337 <vycasnicolas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["image"]

[dependencies.glam]
version = "0.12.0"
