[package]
name = "outrun_clone"
version = "0.1.0"
authors = ["Tomast1337 <vycasnicolas@gmail.com>"]
edition = "2021"

[dependencies]
winit = "0.30"
glutin = "0.32"
glutin-winit = "0.5"
glow = "0.16"
image = { version = "0.25", default-features = false, features = ["png"] }
bytemuck = { version = "1", features = ["derive"] }
